// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Section Esempio 1`] = `
<div>
  <div
    class="section"
  >
    <div
      class="section-content"
    >
      <div
        class="container"
      >
        <div
          class="mb-3 row"
        >
          <div
            class="col-12"
          >
            <h4>
              Morbi fermentum amet
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="pe-0 pe-md-5 mb-3 col-12 col-lg-6 col-xl-4"
          >
            Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="pe-0 pe-md-5 mb-3 col-12 col-lg-6 col-xl-4"
          >
            Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="pe-0 pe-md-5 mb-3 col-12 col-lg-6 col-xl-4"
          >
            Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Section ImmagineDiSfondo 1`] = `
<div>
  <div
    class="section section-image"
    style="background-image: url(https://picsum.photos/1280/720?image=811);"
  >
    <div
      class="section-content"
    >
      <div
        class="white-color container"
      >
        <div
          class="row"
        >
          <div
            class="col-12"
          >
            <h4>
              Morbi fermentum amet
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Section SectionConCard 1`] = `
<div>
  <div
    class="section section-muted"
  >
    <div
      class="section-content"
    >
      <h4>
        Morbi fermentum amet
      </h4>
      <div
        class="row"
      >
        <div
          class="col-sm-6"
        >
          <div
            class="shadow h-100 card"
          >
            <div
              class="card-body"
            >
              <p
                class="card-text"
              >
                Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus. Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et.
                 
              </p>
            </div>
          </div>
        </div>
        <div
          class="col-sm-6"
        >
          <div
            class="shadow h-100 card"
          >
            <div
              class="card-body"
            >
              <p
                class="card-text"
              >
                Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus. Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Section SfondoNeutrale 1`] = `
<div>
  <div
    class="section section-neutral"
  >
    <div
      class="section-content"
    >
      <div
        class="white-color container"
      >
        <div
          class="row"
        >
          <div
            class="col-12"
          >
            <h4>
              Morbi fermentum amet
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Section SfondoPrimario 1`] = `
<div>
  <div
    class="section section-primary"
  >
    <div
      class="section-content"
    >
      <div
        class="white-color container"
      >
        <div
          class="row"
        >
          <div
            class="col-12"
          >
            <h4>
              Morbi fermentum amet
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Section SfondoTenue 1`] = `
<div>
  <div
    class="section section-muted"
  >
    <div
      class="section-content"
    >
      <div
        class="container"
      >
        <div
          class="mb-3 row"
        >
          <div
            class="col-12"
          >
            <h4>
              Morbi fermentum amet
            </h4>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
          </div>
          <div
            class="col-12 col-lg-6 col-xl-4"
          >
            Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
